[gd_scene load_steps=24 format=2]

[ext_resource path="res://art/characters/slime.png" type="Texture" id=1]
[ext_resource path="res://Scripts/enemy_hitbox.gd" type="Script" id=2]
[ext_resource path="res://SlimeBoss.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=37]
radius = 183.011

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 99.5, 52 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 105, 76.5 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.109804, 0.854902, 0.0862745, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="SlimeBoss" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 10, 10 )
frames = SubResource( 36 )
animation = "Walk"

[node name="Detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.5, 27 )
shape = SubResource( 41 )

[node name="slime_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_hitbox"]
position = Vector2( -5, 13 )
shape = SubResource( 42 )

[node name="deathTimer" type="Timer" parent="."]

[node name="takeDamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="slimeHealth" type="ProgressBar" parent="."]
margin_left = -6.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 36.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 40 )
max_value = 2000.0
percent_visible = false

[node name="Slimespawn3" type="Position2D" parent="."]
position = Vector2( -18, 106 )

[node name="Slimespawn2" type="Position2D" parent="."]
position = Vector2( -85, 122 )

[node name="Slimespawn1" type="Position2D" parent="."]
position = Vector2( 65, 108 )

[node name="Slimespawntimer" type="Timer" parent="."]

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="area_entered" from="slime_hitbox" to="." method="_on_slime_hitbox_area_entered"]
[connection signal="area_exited" from="slime_hitbox" to="." method="_on_slime_hitbox_area_exited"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="timeout" from="takeDamageTimer" to="." method="_on_takeDamageTimer_timeout"]
[connection signal="timeout" from="Slimespawntimer" to="." method="_on_Slimespawn_timer_timeout"]
